cros: Don't shift login bubble right if it covers part of the anchor.

This is a bit closer to webui-login's behavior (although currently it doesn't
gracefully handle bubbles extending past the bottom of the screen). This also
prevents the auth error bubble from suddenly jumping to the right if it extends
into the shelf a bit.  This Cl also changes the error bubble bounds calculation
to include all of the black box, rather than just the internal content.

Bug: 873953
Change-Id: I13d670a208418f77232c59b756fb7854e1c88cc2
Reviewed-on: https://chromium-review.googlesource.com/1175196
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583081}
Former-commit-id: 873ea7a659e4e1d38a71470bdf8d2e8d92cc5a60